--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html lang="id">
   <head>
-    <meta http-equiv="refresh" content="0; URL='src/pages/home.html'" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="2; URL='src/pages/home.html'" />
+    <title>Mengarahkan...</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: sans-serif;
+        background-color: #f4f4f4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        flex-direction: column;
+        color: #333;
+      }
+
+      .spinner {
+        margin-top: 1rem;
+        width: 40px;
+        height: 40px;
+        border: 5px solid #ddd;
+        border-top: 5px solid #0055aa;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
   </head>
   <body>
-    <p>Redirecting ke halaman beranda...</p>
+    <h2>Mengarahkan ke halaman Beranda...</h2>
+    <div class="spinner"></div>
   </body>
-  e
 </html>
