Add favicon link to multiple HTML pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="refresh" content="2; URL='src/pages/home.html'" />
     <title>Mengarahkan...</title>
+    <link rel="icon" href="https://fav.farm/🕶️" />
     <style>
       body {
         margin: 0;
