--- a/src/pages/daftar-transaksi.html
+++ b/src/pages/daftar-transaksi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Daftar Transaksi</title>
     <link rel="stylesheet" href="../../assets/css/style.css" />
+    <link rel="icon" href="https://fav.farm/🕶️" />
     <style>
       .table-container {
         width: 90%;
