--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Beranda</title>
     <link rel="stylesheet" href="../../assets/css/style.css" />
+    <link rel="icon" href="https://fav.farm/🕶️" />
     <style>
       .hero {
         max-width: 800px;
