--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Login</title>
     <link rel="stylesheet" href="../../assets/css/style.css" />
+    <link rel="icon" href="https://fav.farm/🕶️" />
     <style>
       .login-card {
         max-width: 400px;
