--- a/src/pages/profil.html
+++ b/src/pages/profil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Profil</title>
     <link rel="stylesheet" href="../../assets/css/style.css" />
+    <link rel="icon" href="https://fav.farm/🕶️" />
     <style>
       .profil-card {
         max-width: 700px;
