--- a/src/pages/transaksi.html
+++ b/src/pages/transaksi.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Transaksi</title>
     <link rel="stylesheet" href="../../assets/css/style.css" />
+    <link rel="icon" href="https://fav.farm/🕶️" />
     <script defer src="../../assets/js/form-validation.js"></script>
     <style>
       .form-card {
