--- a/src/pages/daftar-transaksi.html
+++ b/src/pages/daftar-transaksi.html
@@ -7,7 +7,8 @@
     <link rel="icon" href="https://fav.farm/🕶️" />
     <style>
       .table-container {
-        width: 90%;
+        width: 100%;
+        max-width: 900px;
         margin: 3rem auto;
         background-color: white;
         padding: 2rem;
