--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="refresh" content="2; URL='src/pages/home.html'" />
     <title>Mengarahkan...</title>
     <link rel="icon" href="https://fav.farm/🕶️" />
