--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -2,6 +2,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="../../assets/css/style.css" />
     <link rel="icon" href="https://fav.farm/🕶️" />
