--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="icon" href="https://fav.farm/🕶️" />
     <style>
       body {
-        margin: 0;
+        margin: 0 10px;
         padding: 0;
         font-family: sans-serif;
         background-color: #f4f4f4;
         display: flex;
+        text-align: center;
         justify-content: center;
         align-items: center;
         height: 100vh;
